--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -26,4 +29,4 @@ jobs:
       - name: Deploy Pages
         run: |
           npm install
-          npx ng build --prod --base-href=/GreenCityClient/ --aot=false --build-optimizer=false
+          npm run build -- --prod --base-href=/GreenCityClient/ --aot=false --build-optimizer=false
