--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,15 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Deploy Pages
+      - name: Build
         run: |
           npm install
-          npm run build -- --prod --base-href=/GreenCityClient/ --aot=false --build-optimizer=false
+          npx ng build -- --prod --base-href=/GreenCityClient/ --aot=false --build-optimizer=false
+      
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist/GreenCityClient
+          CLEAN: true 
