--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,18 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
+      - name: Install
+        run: npm install
+      
+      - name: JS Linter
+        run: npm run lint
+
+      - name: CSS Linter
+        run: npm run stylelint
+        
       - name: Build
         run: |
-          npm install
-          npx ng build --prod --base-href=/GreenCityClient/ --aot=false --build-optimizer=false
+          npm run build --prod --base-href=/GreenCityClient/ --aot=false --build-optimizer=false
       
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
