--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,16 @@ jobs:
 
       - name: CSS Linter
         run: npm run stylelint
+
+      - name: Unit Tests
+        run: npm run test --watch=false --progress=false --browsers=ChromeHeadless
+      
+      - name: E2E Tests
+        run: e2e --protractor-config=e2e/protractor-ci.conf.js
         
       - name: Build
         run: |
+          npm run build --prod --delete-output-path --base-href=/GreenCityClient/ --outputPath=dist_aot && rm -rf dist_aot
           npm run build --prod --base-href=/GreenCityClient/ --aot=false --build-optimizer=false
       
       - name: Deploy 🚀
