--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,12 @@ jobs:
         run: npm run stylelint
 
       - name: Unit Tests
-        run: npm run test --watch=false --progress=false --browsers=ChromeHeadless
+        run: google-chrome --version
+        # run: npm run test --watch=false --progress=false --browsers=ChromeHeadless
       
       - name: E2E Tests
-        run: e2e --protractor-config=e2e/protractor-ci.conf.js
+        run: echo 'hi'
+        # run: e2e --protractor-config=e2e/protractor-ci.conf.js
         
       - name: Build
         run: |
