--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         # run: npm run test --watch=false --progress=false --browsers=ChromeHeadless
       
       - name: E2E Tests
-        run: e2e --protractor-config=e2e/protractor-ci.conf.js
+        run: npm run e2e --protractor-config=e2e/protractor-ci.conf.js
         
       - name: Build
         run: |
