--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,9 @@ jobs:
         run: npm run stylelint
 
       - name: Unit Tests
-        run: google-chrome --version
-        #run: npx ng test --watch=false --progress=false --browsers=ChromeHeadless
+        run: npx ng test --watch=false --progress=false --browsers=ChromeHeadless
       
       - name: E2E Tests
-        #run: google-chrome --version
         run: npx ng e2e --protractor-config=e2e/protractor-ci.conf.js
         
       - name: Build
